--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,13 @@
     <string name="no">NO</string>
     <string name="are_you_sure_logout">You want to logout?</string>
     <string name="loading">Loading…</string>
-    <string name="error_server">Something wrong at server, please try again later.</string>
+    <string name="err_server">Something wrong at server, please try again later.</string>
     <string name="address"> Flat No 104, A wing, \nGreen Olive Apartments, \nHinjawadi \nPune-411057  \nMaharashtra \nIndia</string>
+    <string name="error_internet">Please check your internet connection.</string>
+    <string name="error_netconnection">Please check your internet connection!!!</string>
+    <string name="location_service">Location Service is OFF</string>
+    <string name="location_service_message">Can\'t determine your location.\nYour current location not determine</string>
+
 
     <string name="sub_id"><u>1732938344</u></string>
     <string name="facebook_app_id">250490452280914</string>
